# Vanta

./: CMakeLists.txt  README.md
BuildSystem/CMake/CmakeUtils/: Vanta.cmake  VantaOptimization.cmake
Editor/: CMakeLists.txt
Editor/Resources/Shaders/: Grid.glsl  Renderer2D.glsl  SceneComposite.glsl  ShadowMap.glsl  Skybox.glsl  VantaPBR_Static.glsl
Editor/SandboxProject/: Sandbox.vproj
Editor/SandboxProject/Assets/scenes/: AnimationTest.vscene  GeometryTest.vscene  ShadowTest.vscene  SponzaDemo.vscene
Editor/Source/: EditorLayer.cpp  EditorLayer.hpp  Vanta-Editor.cpp
Editor/assets/env/: imgui.ini
Editor/assets/meshes/Cube1m/: Cube.001.pxm
Editor/assets/meshes/Default/: Capsule.fbx  Cone.fbx  Cube.fbx  Cylinder.fbx  Plane.fbx  Sphere.fbx  Torus.fbx
Editor/assets/meshes/Default/Capsule/: Sphere.004.pxm
Editor/assets/scenes/: LightingTest.vscene  PinkSunrise.vscene  Sponza.vscene
Editor/assets/scripts/: test.lua
Editor/assets/shaders/: EnvironmentIrradiance.glsl  EnvironmentMipFilter.glsl  Grid.glsl  Outline_Anim.glsl  PBR_AnimMesh.glsl  PBR_StaticMesh.glsl  PreethamSky.glsl  ShadowMap_Anim.glsl  VantaPBR_Anim.glsl  VantaPBR_Static.glsl  shader.glsl  simplepbr.glsl
Engine/: CMakeLists.txt
Engine/Source/: EntryPoint.hpp  Vanta.hpp  vapch.cpp  vapch.hpp
Engine/Source/Asset/: Asset.hpp  AssetExtensions.hpp  AssetImporter.cpp  AssetImporter.hpp  AssetManager.cpp  AssetManager.hpp  AssetMetadata.hpp  AssetRegistry.cpp  AssetRegistry.hpp  AssetSerializer.cpp  AssetSerializer.hpp  AssetTypes.hpp  CMakeLists.txt  MeshSerializer.cpp  MeshSerializer.hpp
Engine/Source/Core/: Application.cpp  Application.hpp  Assert.hpp  Base.cpp  Base.hpp  Buffer.hpp  CMakeLists.txt  Hash.cpp  Hash.hpp  Input.cpp  Input.hpp  KeyCodes.hpp  Layer.cpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  Log.cpp  Log.hpp  Ref.cpp  Ref.hpp  TimeStep.cpp  TimeStep.hpp  Timer.hpp  UUID.cpp  UUID.hpp  Version.hpp  Window.cpp  Window.hpp
Engine/Source/Debug/: CMakeLists.txt  Profiler.hpp
Engine/Source/Editor/: AssetEditorPanel.cpp  AssetEditorPanel.hpp  AssetManagerPanel.cpp  AssetManagerPanel.hpp  CMakeLists.txt  ContentBrowserPanel.cpp  ContentBrowserPanel.hpp  DefaultAssetEditors.cpp  DefaultAssetEditors.hpp  EditorCamera.cpp  EditorCamera.hpp  MeshViewerPanel.cpp  MeshViewerPanel.hpp  ObjectsPanel.cpp  ObjectsPanel.hpp  SceneHierarchyPanel.cpp  SceneHierarchyPanel.hpp
Engine/Source/Editor/ContentBrowser/: ContentBrowserItem.cpp  ContentBrowserItem.hpp
Engine/Source/Events/: ApplicationEvent.hpp  CMakeLists.txt  Event.hpp  KeyEvent.hpp  MouseEvent.hpp
Engine/Source/ImGui/: CMakeLists.txt  ImGui.hpp  ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.hpp  ImGuizmo.cpp  VulkanImGui.cpp
Engine/Source/Math/: AABB.hpp  CMakeLists.txt  Mat4.cpp  Mat4.hpp  Math.cpp  Math.hpp  Noise.cpp  Noise.hpp  Ray.hpp
Engine/Source/Platform/: CMakeLists.txt
Engine/Source/Platform/Windows/: WindowsFileSystem.cpp
Engine/Source/Project/: CMakeLists.txt  Project.cpp  Project.hpp  ProjectSerializer.cpp  ProjectSerializer.hpp
Engine/Source/Renderer/: Buffer.cpp  Buffer.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Framebuffer.cpp  Framebuffer.hpp  Image.cpp  Image.hpp  IndexBuffer.cpp  IndexBuffer.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  MeshFactory.cpp  MeshFactory.hpp  Pipeline.cpp  Pipeline.hpp  PipelineCompute.cpp  PipelineCompute.hpp  RenderCommandBuffer.cpp  RenderCommandBuffer.hpp  RenderCommandQueue.cpp  RenderCommandQueue.hpp  RenderPass.cpp  RenderPass.hpp  Renderer.cpp  Renderer.hpp  Renderer2D.cpp  Renderer2D.hpp  RendererAPI.hpp  RendererCapabilities.hpp  RendererContext.cpp  RendererContext.hpp  RendererTypes.hpp  SceneEnvironment.cpp  SceneEnvironment.hpp  SceneRenderer.cpp  SceneRenderer.hpp  (+17 more)
Engine/Source/Renderer/Backend/OpenGL/: CMakeLists.txt  OpenGLBuffer.cpp  OpenGLBuffer.hpp  OpenGLContext.cpp  OpenGLContext.hpp  OpenGLFramebuffer.cpp  OpenGLFramebuffer.hpp  OpenGLImGuiLayer.cpp  OpenGLImGuiLayer.hpp  OpenGLImage.cpp  OpenGLImage.hpp  OpenGLIndexBuffer.cpp  OpenGLIndexBuffer.hpp  OpenGLMaterial.cpp  OpenGLMaterial.hpp  OpenGLPipeline.cpp  OpenGLPipeline.hpp  OpenGLRenderPass.cpp  OpenGLRenderPass.hpp  OpenGLRenderer.cpp  OpenGLRenderer.hpp  OpenGLRendererAPI.cpp  OpenGLShader.cpp  OpenGLShader.hpp  OpenGLShaderUniform.cpp  OpenGLShaderUniform.hpp  OpenGLTexture.cpp  OpenGLTexture.hpp  OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.hpp  OpenGLUniformBufferSet.hpp  OpenGLVertexArray.cpp  OpenGLVertexArray.hpp  OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.hpp
Engine/Source/Renderer/Backend/Vulkan/: CMakeLists.txt  Vulkan.cpp  Vulkan.hpp  VulkanAllocator.cpp  VulkanAllocator.hpp  VulkanComputePipeline.cpp  VulkanComputePipeline.hpp  VulkanContext.cpp  VulkanContext.hpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanDiagnostics.cpp  VulkanDiagnostics.hpp  VulkanFramebuffer.cpp  VulkanFramebuffer.hpp  VulkanImGuiLayer.cpp  VulkanImGuiLayer.hpp  VulkanImage.cpp  VulkanImage.hpp  VulkanIndexBuffer.cpp  VulkanIndexBuffer.hpp  VulkanMaterial.cpp  VulkanMaterial.hpp  VulkanPipeline.cpp  VulkanPipeline.hpp  VulkanRenderCommandBuffer.cpp  VulkanRenderCommandBuffer.hpp  VulkanRenderPass.cpp  VulkanRenderPass.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp  VulkanShader.cpp  VulkanShader.hpp  VulkanStorageBuffer.cpp  VulkanStorageBuffer.hpp  VulkanStorageBufferSet.hpp  VulkanSwapChain.cpp  VulkanSwapChain.hpp  VulkanTexture.cpp  VulkanTexture.hpp  (+5 more)
Engine/Source/Scene/: CMakeLists.txt  Components.hpp  Entity.cpp  Entity.hpp  Scene.cpp  Scene.hpp  SceneCamera.cpp  SceneCamera.hpp  SceneSerializer.cpp  SceneSerializer.hpp
Engine/Source/Utilities/: CMakeLists.txt  FileSystem.cpp  FileSystem.hpp  StringUtils.cpp  StringUtils.hpp
