set(RENDERER_SOURCES
		Camera.cpp
		Framebuffer.cpp
		IndexBuffer.cpp
		Material.cpp
		Mesh.cpp
		Pipeline.cpp
		RenderCommandQueue.cpp
		Renderer.cpp
		Renderer2D.cpp
		RenderPass.cpp
		SceneEnvironment.cpp
		SceneRenderer.cpp
		Shader.cpp
		Texture.cpp
		VertexBuffer.cpp
		Image.cpp
		UniformBuffer.cpp
		RendererContext.cpp
		RenderCommandBuffer.cpp
		UniformBufferSet.cpp
)

set(RENDERER_HEADERS
		Camera.hpp
		Framebuffer.hpp
		IndexBuffer.hpp
		Material.hpp
		Mesh.hpp
		Pipeline.hpp
		RenderCommandQueue.hpp
		Renderer.hpp
		Renderer2D.hpp
		RendererAPI.hpp
		RenderPass.hpp
		SceneEnvironment.hpp
		SceneRenderer.hpp
		Shader.hpp
		ShaderUniform.hpp
		Texture.hpp
		VertexBuffer.hpp
		Image.hpp
		RendererCapabilities.hpp
		RendererContext.hpp
		UniformBuffer.hpp
		RendererTypes.hpp
		RenderCommandBuffer.hpp
		UniformBufferSet.hpp
)

target_sources(Vanta
		PRIVATE
		${RENDERER_SOURCES}
		${RENDERER_HEADERS}
)

add_subdirectory(Backend/OpenGL)
add_subdirectory(Backend/Vulkan)